// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transactions Can return aggregated data 1`] = `
Object {
  "transactions": Array [
    Object {
      "deposit": "0",
      "fee": "207829",
      "hash": "59f68ea73b95940d443dc516702d5e5deccac2429e4d974f464cc9b26292fd9c",
      "inputs_aggregate": Object {
        "aggregate": Object {
          "count": "1",
          "max": Object {
            "value": "29699998493355698",
          },
          "min": Object {
            "value": "29699998493355698",
          },
          "sum": Object {
            "value": "29699998493355698",
          },
        },
      },
      "outputs_aggregate": Object {
        "aggregate": Object {
          "count": "1",
          "max": Object {
            "value": "29699998493147869",
          },
          "min": Object {
            "value": "29699998493147869",
          },
          "sum": Object {
            "value": "29699998493147869",
          },
        },
      },
    },
  ],
}
`;

exports[`transactions Can return filtered aggregated data 1`] = `
Object {
  "transactions": Array [
    Object {
      "hash": "a3d6f2627a56fe7921eeda546abfe164321881d41549b7f2fbf09ea0b718d758",
      "outputs_aggregate": Object {
        "aggregate": Object {
          "count": "1",
        },
      },
    },
  ],
}
`;

exports[`transactions Returns transactions by hashes 1`] = `
Object {
  "transactions": Array [
    Object {
      "block": Object {
        "number": 48,
      },
      "blockIndex": 0,
      "collateralInputs": Array [],
      "deposit": "1506000000",
      "fee": "238057",
      "hash": "a3d6f2627a56fe7921eeda546abfe164321881d41549b7f2fbf09ea0b718d758",
      "inputs": Array [
        Object {
          "address": "addr_test1vz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclgmzkket",
          "sourceTxHash": "b75ec46c406113372efeb1e57d9880856c240c9b531e3c680c1c4d8bf2253625",
          "sourceTxIndex": 0,
          "value": "29999999999800000",
        },
      ],
      "inputs_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "value": "29999999999800000",
          },
        },
      },
      "outputs": Array [
        Object {
          "address": "addr_test1vz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclgmzkket",
          "addressHasScript": false,
          "index": 0,
          "paymentCredential": "9e5614893238cf85e284c61ec56d5efd9f9cdc4863ba7e1bf00c2c7d",
          "value": "29699998493561943",
        },
        Object {
          "address": "addr_test1qz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclvk35gzr67hz78plv88jemfs2p9e2780xm98cfrf4vvu0rq83pdz2",
          "addressHasScript": false,
          "index": 1,
          "paymentCredential": "9e5614893238cf85e284c61ec56d5efd9f9cdc4863ba7e1bf00c2c7d",
          "value": "100000000000000",
        },
        Object {
          "address": "addr_test1qz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzcl03xqsyk5v0wrqen92yncmn0m0d8k0lcvwt2rkqu3gppw3sdexkvh",
          "addressHasScript": false,
          "index": 2,
          "paymentCredential": "9e5614893238cf85e284c61ec56d5efd9f9cdc4863ba7e1bf00c2c7d",
          "value": "100000000000000",
        },
        Object {
          "address": "addr_test1qz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclfe9t57q689t694cfavck9sh2uw545vp2hz7m7yn03r57kslz5rjf",
          "addressHasScript": false,
          "index": 3,
          "paymentCredential": "9e5614893238cf85e284c61ec56d5efd9f9cdc4863ba7e1bf00c2c7d",
          "value": "100000000000000",
        },
      ],
      "outputs_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "value": "29999998493561943",
          },
        },
      },
      "redeemers": Array [],
      "scriptSize": 0,
      "scripts": Array [],
      "size": 1879,
      "totalOutput": "29999998493561943",
      "validContract": true,
      "withdrawals_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "amount": null,
          },
        },
      },
    },
    Object {
      "block": Object {
        "number": 50,
      },
      "blockIndex": 0,
      "collateralInputs": Array [],
      "deposit": "0",
      "fee": "206245",
      "hash": "a00696a0c2d70c381a265a845e43c55e1d00f96b27c06defc015dc92eb206240",
      "inputs": Array [
        Object {
          "address": "addr_test1vz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclgmzkket",
          "sourceTxHash": "a3d6f2627a56fe7921eeda546abfe164321881d41549b7f2fbf09ea0b718d758",
          "sourceTxIndex": 0,
          "value": "29699998493561943",
        },
      ],
      "inputs_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "value": "29699998493561943",
          },
        },
      },
      "outputs": Array [
        Object {
          "address": "addr_test1vz09v9yfxguvlp0zsnrpa3tdtm7el8xufp3m5lsm7qxzclgmzkket",
          "addressHasScript": false,
          "index": 0,
          "paymentCredential": "9e5614893238cf85e284c61ec56d5efd9f9cdc4863ba7e1bf00c2c7d",
          "value": "29699998493355698",
        },
      ],
      "outputs_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "value": "29699998493355698",
          },
        },
      },
      "redeemers": Array [],
      "scriptSize": 0,
      "scripts": Array [],
      "size": 1156,
      "totalOutput": "29699998493355698",
      "validContract": true,
      "withdrawals_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "amount": null,
          },
        },
      },
    },
  ],
}
`;

exports[`transactions Returns transactions by hashes with scripts 1`] = `
Object {
  "plutusResult": Object {
    "data": Object {
      "transactions": Array [
        Object {
          "block": Object {
            "number": 212294,
          },
          "blockIndex": 0,
          "collateralInputs": Array [
            Object {
              "value": "9993865987",
            },
          ],
          "deposit": "0",
          "fee": "922864",
          "hash": "750eed6d314f64d8d5b5fe10a4bc34fe21bbf9c657660e061b26f091dac21717",
          "inputs": Array [
            Object {
              "address": "addr_test1wrp082rs5aa6a2pp55heu56gtmashrwx373230exgjm09vcygvy48",
              "sourceTxHash": "1ac7c37eda5e446a10066fddaae5a1bdbedbc828cfc1ecf21f8308d4714b192a",
              "sourceTxIndex": 0,
              "value": "1387820",
            },
            Object {
              "address": "addr_test1qzmh55q6yrdvy52jyze9amqm28v26svjqstwgyhyfm9936z8cxm47kgqa3pgqvxhtfec076jmhfzj5v8pav5eewqxymqqpatlt",
              "sourceTxHash": "b1d3ace8421a7d1549577054d1e7f437cbcf9fd91a54361fd7ab940a90778b92",
              "sourceTxIndex": 0,
              "value": "9993865987",
            },
          ],
          "inputs_aggregate": Object {
            "aggregate": Object {
              "sum": Object {
                "value": "9995253807",
              },
            },
          },
          "outputs": Array [
            Object {
              "address": "addr_test1qzmh55q6yrdvy52jyze9amqm28v26svjqstwgyhyfm9936z8cxm47kgqa3pgqvxhtfec076jmhfzj5v8pav5eewqxymqqpatlt",
              "addressHasScript": false,
              "index": 0,
              "paymentCredential": "b77a501a20dac2515220b25eec1b51d8ad41920416e412e44eca58e8",
              "value": "9994330943",
            },
          ],
          "outputs_aggregate": Object {
            "aggregate": Object {
              "sum": Object {
                "value": "9994330943",
              },
            },
          },
          "redeemers": Array [
            Object {
              "scriptHash": "c2f3a870a77baea821a52f9e53485efb0b8dc68fa2a8bf2644b6f2b3",
            },
            Object {
              "scriptHash": "7348135a9aa87bff1beba4e7fe72e66dd4cf785fcb2f221002b90ede",
            },
          ],
          "scriptSize": 15677,
          "scripts": Array [],
          "size": 16313,
          "totalOutput": "9994330943",
          "validContract": true,
          "withdrawals_aggregate": Object {
            "aggregate": Object {
              "sum": Object {
                "amount": null,
              },
            },
          },
        },
      ],
    },
    "loading": false,
    "networkStatus": 7,
    "stale": false,
  },
  "timelockResult": Object {
    "data": Object {
      "transactions": Array [],
    },
    "loading": false,
    "networkStatus": 7,
    "stale": false,
  },
}
`;

exports[`transactions metadata JSON object 1`] = `
Object {
  "transactions": Array [
    Object {
      "metadata": Array [
        Object {
          "key": "1",
          "value": Object {
            "cardano": "First Metadata from cardanocli-js",
          },
        },
      ],
    },
  ],
}
`;

exports[`transactions transactions with collateral shows the collateral inputs and outputs 1`] = `
Object {
  "transactions": Array [
    Object {
      "collateralInputs": Array [
        Object {
          "address": "addr_test1qzu4zx26m7067am9g3zpkt3mh86j33vd6vtv5r35rxdcxwsye5pj8aafutn263fps7hk9vgkyfx7r7gfnmxfpn2v8zrqpwmzcx",
          "sourceTransaction": Object {
            "hash": "5b7e7789b5a71101d12c7d8070b74bb4576c361529a089176bf6c073650b9b5e",
          },
          "sourceTxHash": "5b7e7789b5a71101d12c7d8070b74bb4576c361529a089176bf6c073650b9b5e",
          "sourceTxIndex": 0,
          "tokens": Array [],
          "tokens_aggregate": Object {
            "aggregate": Object {
              "sum": Object {
                "quantity": null,
              },
            },
          },
          "value": "7413772505",
        },
      ],
      "collateralInputs_aggregate": Object {
        "aggregate": Object {
          "count": "1",
          "max": Object {
            "value": "7413772505",
          },
          "min": Object {
            "value": "7413772505",
          },
          "sum": Object {
            "value": "7413772505",
          },
        },
      },
      "collateralOutputs": Array [
        Object {
          "address": "addr_test1qzu4zx26m7067am9g3zpkt3mh86j33vd6vtv5r35rxdcxwsye5pj8aafutn263fps7hk9vgkyfx7r7gfnmxfpn2v8zrqpwmzcx",
          "addressHasScript": false,
          "datum": null,
          "index": 2,
          "paymentCredential": "b951195adf9faf776544441b2e3bb9f528c58dd316ca0e34199b833a",
          "script": null,
          "value": "7408772505",
        },
      ],
      "collateralOutputs_aggregate": Object {
        "aggregate": Object {
          "count": "1",
          "max": Object {
            "value": "7408772505",
          },
          "min": Object {
            "value": "7408772505",
          },
          "sum": Object {
            "value": "7408772505",
          },
        },
      },
      "hash": "c1bb6a765ac42c5bb80e531d1feaa5bd4a4f0d55c331baffa9b014b942995947",
    },
  ],
}
`;

exports[`transactions transactions with reference inputs shows the reference inputs 1`] = `
Object {
  "transactions": Array [
    Object {
      "hash": "93818dc2e98d924c7379e9a65a44e4890981e675d7e0d23601194c7dff01b0b3",
      "referenceInputs": Array [
        Object {
          "address": "addr_test1wr8h9xuednt82rmw7ptcdzqw7d65chtqr0e5mnkju09c0mqjz722h",
          "sourceTransaction": Object {
            "hash": "03d2fdb6407dc21bda7037a88c65da250766acd02327727dcf4d12fe7268833c",
          },
          "sourceTxHash": "03d2fdb6407dc21bda7037a88c65da250766acd02327727dcf4d12fe7268833c",
          "sourceTxIndex": 1,
        },
        Object {
          "address": "addr_test1wp63gyh62h77wfaa35c8u5zynulzp2afkl7yrpcr2zkk34gkwah0z",
          "sourceTransaction": Object {
            "hash": "5fb81bcabefefdb725a26fc9825d517ba79a05f86f845fda42b3f0f54b7ab90b",
          },
          "sourceTxHash": "5fb81bcabefefdb725a26fc9825d517ba79a05f86f845fda42b3f0f54b7ab90b",
          "sourceTxIndex": 1,
        },
        Object {
          "address": "addr_test1wp63gyh62h77wfaa35c8u5zynulzp2afkl7yrpcr2zkk34gkwah0z",
          "sourceTransaction": Object {
            "hash": "c3e9dcc6c638b78c2591f74cfca27fba728e56c18e0b5a61a2a0cc900592c59f",
          },
          "sourceTxHash": "c3e9dcc6c638b78c2591f74cfca27fba728e56c18e0b5a61a2a0cc900592c59f",
          "sourceTxIndex": 1,
        },
      ],
      "referenceInputs_aggregate": Object {
        "aggregate": Object {
          "count": "3",
          "max": Object {
            "value": "27989140",
          },
          "min": Object {
            "value": "27704680",
          },
          "sum": Object {
            "value": "83398500",
          },
        },
      },
    },
  ],
}
`;

exports[`transactions transactions with tokens shows the tokens minted and output 1`] = `
Object {
  "transactions": Array [
    Object {
      "block": Object {
        "number": 234850,
      },
      "blockIndex": 1,
      "deposit": "0",
      "fee": "451312",
      "hash": "c1bb6a765ac42c5bb80e531d1feaa5bd4a4f0d55c331baffa9b014b942995947",
      "inputs": Array [
        Object {
          "address": "addr_test1zrrryp45pgzvkha6hkxhsann0wcntvgjmznr6uwz2v0uvfcye5pj8aafutn263fps7hk9vgkyfx7r7gfnmxfpn2v8zrqnghs3t",
          "sourceTxHash": "5b7e7789b5a71101d12c7d8070b74bb4576c361529a089176bf6c073650b9b5e",
          "sourceTxIndex": 1,
          "value": "1006657521",
        },
        Object {
          "address": "addr_test1qzu4zx26m7067am9g3zpkt3mh86j33vd6vtv5r35rxdcxwsye5pj8aafutn263fps7hk9vgkyfx7r7gfnmxfpn2v8zrqpwmzcx",
          "sourceTxHash": "5b7e7789b5a71101d12c7d8070b74bb4576c361529a089176bf6c073650b9b5e",
          "sourceTxIndex": 0,
          "value": "7413772505",
        },
      ],
      "inputs_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "value": "8420430026",
          },
        },
      },
      "mint": Array [],
      "outputs": Array [
        Object {
          "address": "addr_test1qzu4zx26m7067am9g3zpkt3mh86j33vd6vtv5r35rxdcxwsye5pj8aafutn263fps7hk9vgkyfx7r7gfnmxfpn2v8zrqpwmzcx",
          "index": 0,
          "tokens": Array [],
          "value": "7412988317",
        },
        Object {
          "address": "addr_test1zrrryp45pgzvkha6hkxhsann0wcntvgjmznr6uwz2v0uvfcye5pj8aafutn263fps7hk9vgkyfx7r7gfnmxfpn2v8zrqnghs3t",
          "index": 1,
          "tokens": Array [
            Object {
              "asset": Object {
                "assetId": "87aa0c11bb8f94d523a74fe7badded9c4908d1a65c8a6443e9f98db4b5966c13f108a088b3866cf685862f78817291c413ccbb4e4f47a630a2fb653a",
                "assetName": "b5966c13f108a088b3866cf685862f78817291c413ccbb4e4f47a630a2fb653a",
                "policyId": "87aa0c11bb8f94d523a74fe7badded9c4908d1a65c8a6443e9f98db4",
              },
              "quantity": "1",
            },
          ],
          "value": "1006990397",
        },
      ],
      "outputs_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "value": "8419978714",
          },
        },
      },
      "size": 5639,
      "totalOutput": "8419978714",
      "withdrawals_aggregate": Object {
        "aggregate": Object {
          "sum": Object {
            "amount": null,
          },
        },
      },
    },
  ],
}
`;
